[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rstpm"
version = "0.1.0"
description = "基于 AIS 的实时船舶轨迹预测（RSTPM）"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "shapely>=2.0.0",
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "config*",
    "data_processing*",
    "clustering*",
    "model*",
    "online*",
    "utils*",
    "schemas*",
    "resources*",
]
